--- a/src/apps/robin/static/robin/scss/index.scss
+++ b/src/apps/robin/static/robin/scss/index.scss
@@ -3,7 +3,13 @@
 @mixin outline-1px() {
     outline: 1px solid #ffb546;
 }
-/*================================================================================*/
+
+@mixin shadow() {
+    -webkit-box-shadow: 0 27px 65px -25px #87827f, 0 30px 95px -80px #87827f;
+    -moz-box-shadow: 0 27px 65px -25px #87827f,0 30px 95px -80px #87827f;
+    box-shadow: 0 27px 65px -25px #87827f, 0 30px 95px -80px #87827f;
+}
+/*=============================================================================*/
 ::-webkit-scrollbar {
     width: 10px;
 }
@@ -19,7 +25,12 @@
     border-radius: 10%;
     background-image: linear-gradient(to bottom,#d4496f,#ff7c6e);
 }
-/*================================================================================*/
+/*=============================================================================*/
+
+.parallax .parallax-loaded {
+    opacity: 0.7;
+}
+
 a {
     color: #ff7c6e;
 }
@@ -29,31 +40,20 @@ a {
 }
 
 .article {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-flex-direction: column;
-    -moz-box-flex-direction: column;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
+    @include flexbox; 
+    @include flex-direction(column);
     padding-bottom: 12%;
-/*    margin-top: 120px;*/
+
 }
-
-
 
 p  {
     @include fontsize_default;
     color: #87605b;
-  }
+}
 
 .milk-chocolate {
     color: #572019;
-  }
+}
   
 .phone {
     font-size: 35px;
@@ -65,10 +65,6 @@ p  {
    @include opacity(0.75);
 }
 
-div {
-   // border: cyan 1px solid;
-}
-
 #work-with-robin {
     padding: 100px 0;
     background: #fff;
@@ -77,30 +73,11 @@ div {
     h1 {
         margin-bottom: 40px
     }
-/*  outline-offset: -20px;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: justify;
-    -webkit-box-justify-content: space-between;
-    -moz-box-justify-content: space-between;
-    -webkit-justify-content: space-between; 
-    -ms-justify-content: space-between;
-    justify-content: space-between; 
-    padding: 60px 115px; 
-    t-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box; 
-    -webkit-box-shadow: 0 50px 60px -30px #f9e4ca, 0 50px 65px -80px #f9e7d1; 
-    -moz-box-shadow: 0 50px 60px -30px #f9e4ca,0 50px 65px -80px #f9e7d1;
-    box-shadow: 0 50px 60px -30px #f9e4ca, 0 50px 65px -80px #f9e7d1; 
-    max-width: 980px;
-    padding: 60px 115px 60px 90px;*/
 }
-.slider-item img {
+
+#main-slider .slider-item img {
     @include outline-1px;
+    @include shadow;
 }
 
 .day img {
@@ -132,52 +109,26 @@ div {
 }
 
 .testi-text-small {
-    
     @extend .text-small;
-        &:after {
-            content: '';
-            background-image: $sprite_url;
-            width: 26px;
-            height: 19px;
-            background-position: -42px -120px;
-            position: absolute;
-            bottom: -20px;
-            right: -12px;
+    
+    &:after {
+        content: '';
+        background-image: $sprite_url;
+        width: 26px;
+        height: 19px;
+        background-position: -42px -120px;
+        position: absolute;
+        bottom: -20px;
+        right: -12px;
     }
 }
 
-@media screen and (min-width: 1200px) {
- .day .text-block {
-    margin-top: 40px;
-  }
-}
-
-@media screen and (min-width: 900px) {    /* откуда это найти*/
-
-    .text-normal {
-    font-size: 20px;
-    font-size: 1.25rem;
-    line-height: 1.5;
+#rings {
+    background-color: #fffbf6;      
+    
+    .columns img {
+        @include shadow;
     }
-}
-
-
-
-@media screen and (max-width: 1399px) and (min-width: 1200px) {
-#for-a-day {
-    padding: 95px 0;
- }
-}
-
-#rings {
-    background-color: #fffbf6;         
-}
-
-@media screen and (min-width: 1024px) {
-
-#rings {
-    padding: 100px 0;
-  }
 }
 
 #for-a-day {
@@ -199,13 +150,13 @@ div {
 
 .golden-line {
     z-index: 100;
-   @include outline-1px;
+    @include outline-1px;
     outline-offset: -40px;
 }
 
 .golden-line-two {
     z-index: 100;
-   @include outline-1px;
+    @include outline-1px;
     outline-offset: -10px;
     background: #fff;
 }
@@ -268,11 +219,6 @@ div {
     @include why;
 }
 
-#work-with-robin {
-/*    .btn-robin {
-        margin-top: 50px;
-    }*/
-}
 
 .sakura {
     width: 100%;
@@ -344,9 +290,9 @@ div {
     }
     
     .column-right {
+        transform: translate3d(0%, 0, 0px);
         padding: 80px 0px 80px 35px;
-/*        padding-right: 15px;*/
-      @include media_interval($media768, 0) {
+        @include media_interval($media768, 0) {
         min-height: 1em;
 
         & > *:first-child {
@@ -378,7 +324,7 @@ div {
     padding: 120px 0 60px 0;
     z-index: -1;
     overflow: visible;
-  }
+}
   
 #main-slider .slider {
     max-width: 980px;
@@ -387,13 +333,6 @@ div {
 #main-slider {
     padding: 0 0 10% 0;
 }
-  
-#testi-slider {
-    padding: 3% 0 10% 0;
-    width: 100%;
-    margin: auto;
-}
-  
 
 #main-slider {
     
@@ -422,19 +361,22 @@ div {
         
         span {
             background: inherit;
-            }
+        }
     }
 }
-/*============SLIDER TWO==============*/
+
 #testi-slider {
+    padding: 3% 0 10% 0;
+    width: 100%;
+    margin: auto;
     
     .testi-slider {
         margin: auto;
         max-width: 980px;
+        height: 100%;
     }
     
     .slider-slide {
-        height: 380px;
         position: absolute;
         min-height: inherit;
         width: 100%;
@@ -490,7 +432,7 @@ div {
 
 .testi {
     padding: 20px;
-    height: 430px;
+    height: 87%;
     background: #fff;
     -webkit-box-shadow: 0 35px 60px -30px #f9e4ca, 0 50px 65px -80px #f9e7d1; 
     -moz-box-shadow: 0 35px 60px -30px #f9e4ca,0 50px 65px -80px #f9e7d1;
@@ -499,19 +441,17 @@ div {
     @include flexbox;
     text-align: left;
     position: relative;
-        
 }
 
 .text-content {
-/*    @include fontsize_default;*/
     @include flexbox;
     @include flex-direction(column);
     @include justify-content(space-between);
-/*    height: 380px;*/
     border: 1px solid #ffb546;
     padding: 40px 40px 40px 80px;
     position: relative;
     width: 100%;
+    
     
     &:before {
         content: '';
@@ -528,7 +468,7 @@ div {
 .testi-name {
     @include flexbox;
     @include align-items(center);
-    margin-top: 30px;
+    margin-top: 10px;
     img {
         border-radius: 50px;
     }
@@ -547,20 +487,6 @@ div {
     padding-left: 10px;
 }
 
-@media screen and (min-width: 1200px) {
-    
-    .testi {
-        padding: 20px;
- }
-}
-
-@media screen and (max-width: 1399px) {
-
-    #testimonials .text-content:before {
-        left: 15px;
- }
-}
-
 .text-contact {
     z-index: 1;
     position: relative;
@@ -568,15 +494,15 @@ div {
     background: #fff;
     margin: 0 -10px;
     @include outline-1px;
+    @include shadow;
     outline-offset: -20px;
-    -webkit-box-shadow: 0 25px 65px -25px #c06a29, 0 30px 95px -80px #f7bea6;
-    -moz-box-shadow: 0 25px 65px -25px #c06a29,0 30px 95px -80px #f7bea6;
-    box-shadow: 0 25px 65px -25px #c06a29, 0 30px 95px -80px #f7bea6;
+   
 }
 
 .img-block {
     display: inline-block;
     width: 50%;
+    vertical-align: bottom;
     @include box-sizing(border-box);
     padding: 50px 10px 0 10px;
 }
@@ -604,60 +530,17 @@ div {
     padding: 120px 0;
     margin: 0; 
     height: 100%;
-/*    background: url(img/Robin_Photo.png) no-repeat;*/
     position: relative;
 }
 
-.cont-test {
+.back-ground {
     position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     background-size: cover;
-/*    width: 100%;
-    height: 100%;*/
     z-index: 0;
 }
-/*
-margin: 0;  Убираем отступы 
-    height: 100%;  Высота страницы 
-    background: url(images/river.jpg);  Параметры фона 
-    background-size: cover;  Фон занимает всю доступную площадь */
-
-
-@media screen and (max-width: 1399px) {
-  
-/*    #footer-cell .first_logo {
-            font-size: 23px;
-            }*/
-    
-    .footer-box {
-        
-        .phone {
-            font-size: 25px;
-        }
-    }
-}
-
-@media screen and (min-width: 1400px) {
-    
-    .article {
-        padding: 45px 0 100px 0;
-    }
-    
-    #for-a-day {
-        padding: 60px;
-    }
-    
-}
-
-
-@media screen and (min-width: 1024px) {
-
-#rings {
-    padding: 100px 0 10px 0;
-      }
-    }
 
 .text-columns {
     -webkit-perspective: 1px;
@@ -668,7 +551,7 @@ margin: 0;  Убираем отступы
     -moz-column-gap: 3em;
     column-gap: 3em; 
     margin-bottom: 50px;
-    }
+}
     
 .why-block {
     max-width: 980px;
@@ -676,21 +559,19 @@ margin: 0;  Убираем отступы
     -webkit-box-sizing: border-box; 
     -moz-box-sizing: border-box;
      box-sizing: border-box; 
-    -webkit-box-shadow: 0 50px 60px -30px #f9e4ca, 0 50px 65px -80px #f9e7d1; 
-    -moz-box-shadow: 0 50px 60px -30px #f9e4ca,0 50px 65px -80px #f9e7d1;
-    box-shadow: 0 50px 60px -30px #f9e4ca, 0 50px 65px -80px #f9e7d1;
-    }
+    @include shadow;
+}
     
     
-    @keyframes show-down-arrow {
+@keyframes show-down-arrow {
     0%   {opacity: 0;}
     100% {opacity: 1;}
-    }
+}
 
-    @keyframes jump-down-arrow {
+@keyframes jump-down-arrow {
     0%   {bottom: 20px;}
     100% {bottom: 5px;}
-    }
+}
 
 .slide-down-arrow {
     position: absolute;
