--- a/src/apps/robin/templates/robin/index.html
+++ b/src/apps/robin/templates/robin/index.html
@@ -12,13 +12,13 @@
 
         <div class="grid">
 
-            <div class="gc-wide-5 gc-ml-wide-7 gc-5 gc-ml-7 gc-tablet-5 gc-ml-tablet-6 gc-mobile-6 text-box">
-                <div class="title-h1 title-underline">
-                    For a Day <br>
+            <div class="gc-wide-5 gc-ml-wide-7 gc-5 gc-ml-7 gc-tablet-5 gc-ml-tablet-6 gc-ml-mobile-1 text-box">
+                <div class="title-h1 title-underline aos-init aos-animate" data-aos="fade-down" data-aos-duration="1500">
+                    For a Day <br class="hiden">
                     Like No Other
                 </div>
 
-                <div class="text-block">
+                <div class="text-block aos-init aos-animate" data-aos="fade-down" data-aos-delay="700">
                     <p class="milk-chocolate"> Personalized, poetic ceremonies for the most important moments in your life </p>
                 </div>
 
@@ -26,7 +26,7 @@
                     <a href="#" class="btn-robin open-contact-popup text-styles" >Contact Robin</a>
                 </div>
             </div>
-            <a href="#arrow" class="slide-down-arrow"></a>
+            <a href="#rings" class="slide-down-arrow ca3-scroll-down-link"></a>
         </div>
 
     </div>
@@ -36,11 +36,11 @@
 <div id="rings" class="section golden-line layer-block" >
 
     <div class="grid">
-        <div class="gc-ml-wide-2 gc-wide-7 gc-7 gc-ml-2 gc-tablet-6 gc-ml-tablet-1 gc-mobile-6 text-box">
+        <div class="gc-ml-wide-2 gc-wide-7 gc-7 gc-ml-2 gc-tablet-6 gc-ml-tablet-1 gc-mobile-7 gc-ml-mobile-1 text-box">
 
-            <p class="title-h1 title-underline">Congratulations on Your Engagement </p>
+            <p class="title-h1 title-underline aos-init aos-animate" data-aos="fade-down">Congratulations on Your Engagement </p>
 
-            <p class="text-block">You’ve set your wedding date. Now, are you ready to create a ceremony that touches the hearts of your guests and shows them the love you share? Celebrant Robin would be delighted to work with you <br>
+            <p class="text-block aos-init aos-animate" data-aos-anchor="#trigger" data-aos="fade-down" data-aos-delay="200">You’ve set your wedding date. Now, are you ready to create a ceremony that touches the hearts of your guests and shows them the love you share? Celebrant Robin would be delighted to work with you <br>
                 to create the ceremony of your dreams.
                 <br>
                 <br>
@@ -52,38 +52,28 @@
 
             </p>
         </div>
-        <div class="gc-wide-3 gc-3 gc-tablet-3  rings"> <img src="{% static 'img/rings.png' %}" alt="img not Found :("  > </div>
+        <div class="gc-wide-3 gc-3 gc-tablet-3  rings"> <img src="{% static 'img/rings.png' %}" alt="img not Found :( " id="trigger" class="aos-init aos-animate" data-aos="fade-up" data-aos-delay="200"> </div>
     </div>
-
-
-    <!--    <div class="grid">
-
-            <div class="gc-wide-3 gc-3 gc-ml-1 rings"> <img src="{% static 'img/rings.png' %}" alt="img not Found :("  > </div>
-
-        </div>-->
 
     <div class="grid">
 
-        <div class="gc-ml-wide-2 gc-wide-9 gc-9 gc-ml-2 gc-tablet-9 gc-ml-tablet-1 article">
+        <div class="gc-ml-wide-2 gc-wide-9 gc-9 gc-ml-2 gc-tablet-9 gc-ml-tablet-1 gc-mobile-6 gc-ml-mobile-1 gc-center article aos-init aos-animate" data-aos="fade-down">
 
             <div class="columns">
-                <!--COLUMN-->         <div class="column layer media-inspect layer-enabled">
 
-                    <p class="page-images single-image">
-                        <img alt="s" data-crop="" data-id="8" src="{% static 'img/JPG/download-3.jpg' %}">
+                <div class="column">
+                    <p class="single-image">
+                        <img alt="img not found :(" src="{% static 'img/JPG/download-3.jpg' %}">
                     </p>
-
                     <h2 class="title-h2 title-underline">Creating the Ceremony You Want</h2>
                     <p class="text-box text-small">Together we will build your unique ceremony. We can interweave traditions from your past with new rituals and customs. As you describe your vision for your wedding, Celebrant Robin will identify the metaphors and themes of your ceremony, selecting readings, blessings, poems, music, and ritual elements that align with your vision. You might consider including a remembrance ceremony, a unity ritual, a ring blessing, or a family-joining ritual. Robin can assist you and your ceremony participants in writing vows or speeches, ensuring that everything flows. <br> <br>
                         As we develop the ceremony script, you will review each version and add your comments and suggestions. The week before your wedding date, we will finalize the ceremony and prepare it for presentation. </p>
                 </div>
 
-                <!--COLUMN-->          <div class="column layer media-inspect layer-enabled">
-
-                    <p class=" page-images single-image">
-                        <img alt="s" data-crop="" data-id="8" src="{% static 'img/JPG/download-2.jpg' %}">
+                <div id="testx" class="column right layer layer-enabled media-inspect">
+                    <p class="single-image">
+                        <img alt="img not found :(" src="{% static 'img/JPG/download-2.jpg' %}">
                     </p>
-
                     <h2 class="title-h2 title-underline">About Robin</h2>
                     <p class="text-box text-small">Celebrant Robin officiates at weddings and other ceremonies in Philadelphia, PA, the suburbs of Montgomery, Bucks, and Delaware Counties and in neighboring New Jersey. A writer, theater director, and life-long learner, Robin brings all of her strengths and experience into creating professional, poetic, heartfelt ceremonies that delight her clients. <br> <br>
                         Robin holds Master’s degrees from the University of Pennsylvania and LaSalle University, along with certifications in ceremony development for weddings, funerals, and life-cycle events from the Celebrant Institute and Foundation. She was ordained as a non-denominational minister through the Universal Brotherhood Movement. Robin is also a registered civil celebrant in the State of New Jersey. <br> <br>
@@ -101,15 +91,15 @@
 <div id="work-with-robin" class="section golden-line layer-block">
 
     <div class="grid">
-        <div class="why-block gc-wide-10 gc-center gc-10 gc-tablet-8 golden-line-two">
+        <div class="why-block gc-wide-10 gc-center gc-10 gc-tablet-8 gc-mobile-8 golden-line-two">
 
 
-            <h1 class="why">Why work <br> with Robin? </h1>
-            <p class="text-columns"> By working with Celebrant Robin, you benefit from her training in the elements of ritual, ceremony, myth, and transitions. If you want a ceremony that represents you as the individuals or couple you are, Celebrant Robin is your officiant. <br> <br> The fee for Robin’s services includes all client meetings, travel costs within a 60 mile radius, creation of the final ceremony, and officiating and coordinating the ceremony elements.
+            <h1 class="why aos-init aos-animate" data-aos="fade-down">Why work <br> with Robin? </h1>
+            <p class="text-columns aos-init aos-animate" data-aos="fade-down" data-aos-delay="600"> By working with Celebrant Robin, you benefit from her training in the elements of ritual, ceremony, myth, and transitions. If you want a ceremony that represents you as the individuals or couple you are, Celebrant Robin is your officiant. <br> <br> The fee for Robin’s services includes all client meetings, travel costs within a 60 mile radius, creation of the final ceremony, and officiating and coordinating the ceremony elements.
                 Following the wedding, Celebrant Robin will send your signed wedding license to the county Marriage Bureau and confirm its arrival. Payment options include check, cash, and PayPal. <br> <br> In addition to wedding and elopement ceremonies, Celebrant Robin is available to officiate at baby namings, memorial services, vow renewals, and any other occasion where you want a ceremony to mark a transition or life event. </p>
 
-            <a href="#" class="btn-robin open-contact-popup text-styles"> Contact Robin </a>
-            <img src="{% static 'img/RE_Petals_1920x1224.png' %}" class="sakura" alt="no img found :(">
+            <a href="#" class="btn-robin open-contact-popup text-styles aos-init aos-animate" data-aos="fade-down" data-aos-delay="600" > Contact Robin </a>
+            <img src="{% static 'img/RE_Petals_1920x1224.png' %}" class="sakura parallax" alt="no img found :(">
 
         </div>
     </div>
@@ -120,15 +110,15 @@
     <div id="foto" class="section layer-block">
 
         <div class="grid">
-            <div class="gc-wide-3 gc-ml-wide-2 gc-ml-1 gc-ml-tablet-1">
-                <h1 class="title-h1"> Photos </h1>
+            <div class="gc-wide-3 gc-ml-wide-2 gc-ml-2 gc-ml-tablet-1 gc-ml-mobile-1">
+                <h1 class="title-h1 aos-init aos-animate" data-aos="fade-down" data-aos-delay="70"> Photos </h1>
             </div>
         </div>
 
         <div class="grid">
-            <div id="main-slider" class="section">
+            <div id="main-slider" class="section aos-init aos-animate" data-aos="fade-down">
 
-                <div class="slider gc-wide-10 gc-center gc-10 gc-tablet-8 ">
+                <div class="slider gc-wide-10 gc-center gc-10 gc-tablet-8 gc-mobile-6">
                     <div class="slider-item"> <img src="{% static 'img/foto/1.jpeg' %}"  alt="image not found :("> </div>
                     <div class="slider-item"> <img src="{% static 'img/foto/2.jpeg' %}"  alt="image not found :("> </div>
                     <div class="slider-item"> <img src="{% static 'img/foto/3.jpeg' %}"  alt="image not found :("> </div>
@@ -146,21 +136,21 @@
 
     </div>
     <!--================================================================================-->
-    <div id="testimonials" class="section layer-block">
+    <div id="testimonials" class="section layer-block" >
 
 
         <div class="grid">
 
-            <div class="gc-wide-10 gc-ml-wide-2 gc-ml-1">
+            <div class="gc-wide-10 gc-ml-wide-2 gc-ml-1 gc-ml-tablet-1 gc-ml-mobile-1 " >
 
-                <h1 class="title-h1">Testimonials</h1>
+                <h1 class="title-h1 aos-init aos-animate" data-aos="fade-down" data-aos-delay="70">Testimonials</h1>
 
             </div>
         </div>
 
         <div class="grid">
 
-            <div id="testi-slider" class="section gc-wide-10 gc-center gc-10 gc-tablet-6">
+            <div id="testi-slider" class="section gc-wide-10 gc-center gc-10 gc-tablet-6 gc-ml-mobile-1 aos-init aos-animate" data-aos="fade-down">
 
                 <div class="testi-slider">
 
@@ -278,20 +268,25 @@
         </div>
     </div>
 </div>
-<div class="contact-block block testo">
-    <img src="{% static 'img/backgr.jpg' %}" class="img cont-test" alt="qqqg">
+
+<div class="contact-block block">
+    <img src="{% static 'img/backgr.jpg' %}" class="img back-ground" alt="qqqg">
     <div class="grid">
-        <div class="gc-wide-10 gc-10 gc-tablet-7 gc-ml-tablet-1 gc-center text-wrapper">
+        <div class="gc-wide-10 gc-10 gc-tablet-8 gc-ml-tablet-1 gc-ml-mobile-1 gc-mobile-6 gc-center text-wrapper">
+
             <div class="text-contact">
+
                 <div class="img-block">
-                    <img class="inner section-image" src="{% static 'img/Robin_Photo.png'%}">
+                    <img class="inner section-image aos-init aos-animate" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="200" data-aos-duration="500" src="{% static 'img/Robin_Photo.png'%}">
                 </div>
+
                 <div class="inner-cont">
-                    <div class="title-h1">Let’s Make Your Wedding Special! </div>
-                    <a href="#" class="btn-robin open-contact-popup text-styles"> Contact Robin </a>
+                    <div class="title-h1 aos-init aos-animate" data-aos="fade-down">Let’s Make Your Wedding Special! </div>
+                    <a href="#" class="btn-robin open-contact-popup text-styles aos-init aos-animate" data-aos="fade-zoom-in" data-aos-delay="500"> Contact Robin </a>
                 </div>
 
             </div>
+
         </div>
     </div>
 </div>
