--- a/src/apps_common/header/templates/header/header.html
+++ b/src/apps_common/header/templates/header/header.html
@@ -27,7 +27,7 @@
                 <nav class="menu">
                     <!-- {% menu 'main' %} -->
                     <ul>
-                        <li> <a href="#photo" class itemprop="url"> <span>Photos </span> </a> </li>
+                        <li> <a href="#foto" class itemprop="url"> <span>Photos </span> </a> </li>
                         <li> <a href="#testimonials" class itemprop="url"> <span>Testimonials </span> </a> </li>
                         <li> <a href="#gallery" class itemprop="url"> <span>Blog </span> </a> </li>
                     </ul>
@@ -60,7 +60,7 @@
                 <nav class="menu">
                     <!-- {% menu 'main' %} -->
                     <ul>
-                        <li> <a href="#photo" class itemprop="url"> <span>Photos </span> </a> </li>
+                        <li> <a href="#foto" class itemprop="url"> <span>Photos </span> </a> </li>
                         <li> <a href="#testimonials" class itemprop="url"> <span>Testimonials </span> </a> </li>
                         <li> <a href="#gallery" class itemprop="url"> <span>Blog </span> </a> </li>
                     </ul>
