--- a/src/static/scss/_conf.scss
+++ b/src/static/scss/_conf.scss
@@ -11,6 +11,7 @@ $media900: 900px;
 $media768: 768px;
 $media640: 640px;
 $media600: 600px;
+$media560: 560px;
 $media480: 480px;
 $media400: 400px;
 
@@ -20,7 +21,7 @@ $media400: 400px;
 $cols_wide: 12;
 $cols_desktop: 12;
 $cols_tablet: 10;
-$cols_mobile: 6;
+$cols_mobile: 8;
 
 // Максимальная ширина сетки
 $grid_max_width: 1400px;
