--- a/src/apps_common/footer/templates/footer/footer.html
+++ b/src/apps_common/footer/templates/footer/footer.html
@@ -18,9 +18,9 @@
             <!-- <div id="mobile-menu-button">
                  <div class="burger"></div>
              </div> -->
-            <div class="menu mobile-menu">
+            <!--            <div class="menu mobile-menu">
 
-            </div>
+                        </div>-->
 
 
             <div class="menu-box-footer">
@@ -28,8 +28,8 @@
                 <nav class="menu">
 
                     <ul>
-                        <li> <a href="#gallery" class itemprop="url"> <span>Photos </span> </a> </li>
-                        <li> <a href="#gallery" class itemprop="url"> <span>Testimonials </span> </a> </li>
+                        <li> <a href="#foto" class itemprop="url"> <span>Photos </span> </a> </li>
+                        <li> <a href="#testimonials" class itemprop="url"> <span>Testimonials </span> </a> </li>
                         <li> <a href="#gallery" class itemprop="url"> <span>Blog </span> </a> </li>
                     </ul>
                 </nav>
