--- a/src/static/scss/parallax.scss
+++ b/src/static/scss/parallax.scss
@@ -4,9 +4,9 @@
   position: absolute;
   left: 50%;
   top: 0;
-  min-height: 150%;
+/*  min-height: 100%;*/
   max-width: none;
-  z-index: 1;
+  z-index: -300;
   @include backface-visibility(hidden);
   @include transform(translate(-50%, 0));
 
@@ -23,7 +23,7 @@ picture.parallax {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: -300;
 }
 
 // анимация появления
@@ -31,7 +31,7 @@ picture.parallax {
   @include opacity(0);
 
   &.parallax-loaded {
-    @include opacity(1);
+    @include opacity(0.7);
     @include transition(opacity 0.2s);
   }
 }
