--- a/src/apps/robin/templates/robin/index.html
+++ b/src/apps/robin/templates/robin/index.html
@@ -70,7 +70,7 @@
                         As we develop the ceremony script, you will review each version and add your comments and suggestions. The week before your wedding date, we will finalize the ceremony and prepare it for presentation. </p>
                 </div>
 
-                <div id="testx" class="column right layer layer-enabled media-inspect">
+                <div class="column right layer layer-enabled media-inspect">
                     <p class="single-image">
                         <img alt="img not found :(" src="{% static 'img/JPG/download-2.jpg' %}">
                     </p>
